删除未完成的socket，因为已经没有必要了

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,14 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp_base)
 
-include_directories(tools
-                    socket)
+include_directories(tools)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 set(HEADERS cppbase.h
-            socket/socket.h
-            socket/tcpsocket.h
-            socket/tcpserversocket.h
             tools/cppassert.h
             tools/macros.h)
 set(SOURCE_FILES main.cpp
-                 tools/stringtool.cpp
-                 socket/socket.cpp
-                 socket/tcpsocket.cpp
-                 socket/tcpserversocket.cpp)
+                 tools/stringtool.cpp)
+
 add_executable(cpp_base ${SOURCE_FILES} ${HEADERS})
